bin/testsuite/tests/compiler/src/errors/compiler5248.swg
#global testerror "Err0017"
#test
{
    var x = 5
    let y = #ref &x
    y = #ref &x
}
